fix: dark color scheme in dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -313,6 +313,7 @@ body {
 }
 
 :root[theme='dark'] {
+	color-scheme: dark;
 	body,
 	input,
 	textarea {
